Update index.html using webgl so it will work on an ipad

--- a/index.html
+++ b/index.html
@@ -67,11 +67,146 @@
 
     const spacing = 60;
     const dotDeblurRatio = 5 / 12;
-    const overallBlur = 30;
+    const overallBlur = 8; // WebGL radius; 8 is already strong visually
     const tiltThreshold = 5;
 
     let tiltX = 0;
     let tiltY = 0;
+
+    // --- WebGL Gaussian Blur Engine ---
+    let webglBlur = null;
+
+    function createWebGLBlur(canvas, image) {
+      const glCanvas = document.createElement("canvas");
+      glCanvas.width = canvas.width;
+      glCanvas.height = canvas.height;
+
+      const gl = glCanvas.getContext("webgl", { premultipliedAlpha: false });
+      if (!gl) {
+        console.warn("WebGL not supported, falling back to no blur.");
+        return null;
+      }
+
+      const vertexShaderSource = `
+        attribute vec2 a_position;
+        attribute vec2 a_texCoord;
+        varying vec2 v_texCoord;
+        void main() {
+          gl_Position = vec4(a_position, 0.0, 1.0);
+          v_texCoord = a_texCoord;
+        }
+      `;
+
+      const fragmentShaderSource = `
+        precision mediump float;
+        varying vec2 v_texCoord;
+        uniform sampler2D u_image;
+        uniform vec2 u_resolution;
+        uniform float u_radius;
+
+        void main() {
+          vec2 texel = 1.0 / u_resolution;
+          vec4 color = vec4(0.0);
+          float total = 0.0;
+
+          // radius capped to 10 samples each direction
+          float r = min(u_radius, 10.0);
+
+          for (float x = -10.0; x <= 10.0; x++) {
+            for (float y = -10.0; y <= 10.0; y++) {
+              if (abs(x) > r || abs(y) > r) continue;
+              float weight = exp(-(x*x + y*y) / (2.0 * r * r));
+              color += texture2D(u_image, v_texCoord + vec2(x, y) * texel) * weight;
+              total += weight;
+            }
+          }
+
+          gl_FragColor = color / total;
+        }
+      `;
+
+      function compileShader(type, source) {
+        const shader = gl.createShader(type);
+        gl.shaderSource(shader, source);
+        gl.compileShader(shader);
+        if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+          console.error("Shader compile error:", gl.getShaderInfoLog(shader));
+        }
+        return shader;
+      }
+
+      const vertexShader = compileShader(gl.VERTEX_SHADER, vertexShaderSource);
+      const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fragmentShaderSource);
+
+      const program = gl.createProgram();
+      gl.attachShader(program, vertexShader);
+      gl.attachShader(program, fragmentShader);
+      gl.linkProgram(program);
+      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+        console.error("Program link error:", gl.getProgramInfoLog(program));
+      }
+      gl.useProgram(program);
+
+      const positionBuffer = gl.createBuffer();
+      gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+      // Interleaved position (x,y) and texCoord (u,v)
+      gl.bufferData(
+        gl.ARRAY_BUFFER,
+        new Float32Array([
+          -1, -1,  0, 0,
+           1, -1,  1, 0,
+          -1,  1,  0, 1,
+           1,  1,  1, 1
+        ]),
+        gl.STATIC_DRAW
+      );
+
+      const a_position = gl.getAttribLocation(program, "a_position");
+      const a_texCoord = gl.getAttribLocation(program, "a_texCoord");
+
+      gl.enableVertexAttribArray(a_position);
+      gl.vertexAttribPointer(a_position, 2, gl.FLOAT, false, 16, 0);
+
+      gl.enableVertexAttribArray(a_texCoord);
+      gl.vertexAttribPointer(a_texCoord, 2, gl.FLOAT, false, 16, 8);
+
+      const texture = gl.createTexture();
+      gl.bindTexture(gl.TEXTURE_2D, texture);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
+
+      // Upload the image to the texture
+      gl.texImage2D(
+        gl.TEXTURE_2D,
+        0,
+        gl.RGBA,
+        gl.RGBA,
+        gl.UNSIGNED_BYTE,
+        image
+      );
+
+      const u_resolution = gl.getUniformLocation(program, "u_resolution");
+      const u_radius = gl.getUniformLocation(program, "u_radius");
+      const u_image = gl.getUniformLocation(program, "u_image");
+
+      gl.uniform2f(u_resolution, glCanvas.width, glCanvas.height);
+      gl.uniform1i(u_image, 0); // texture unit 0
+
+      gl.viewport(0, 0, glCanvas.width, glCanvas.height);
+
+      return {
+        canvas: glCanvas,
+        render(radius) {
+          gl.clearColor(0, 0, 0, 1);
+          gl.clear(gl.COLOR_BUFFER_BIT);
+          gl.uniform1f(u_radius, radius);
+          gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+          return glCanvas;
+        }
+      };
+    }
 
     for (let x = spacing; x < canvas.width; x += spacing) {
       for (let y = spacing; y < canvas.height; y += spacing) {
@@ -80,9 +215,14 @@
     }
 
     bgImage.onload = () => {
-      ctx.filter = `blur(${overallBlur}px)`;
-      ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
-      ctx.filter = "none";
+      webglBlur = createWebGLBlur(canvas, bgImage);
+      // Optional: draw once initially
+      if (webglBlur) {
+        const blurred = webglBlur.render(overallBlur);
+        ctx.drawImage(blurred, 0, 0, canvas.width, canvas.height);
+      } else {
+        ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
+      }
     };
 
     music.addEventListener("ended", () => {
@@ -93,29 +233,39 @@
     const historyText =
 `Pac‑Man made its debut in 1980 — Namco released it in Japan in May of that year,
 and it quickly spread worldwide, becoming one of the most iconic arcade games ever.
+
 The TV show CHiPs, about California Highway Patrol officers Ponch and Jon,
 originally aired from 1977 to 1983 on NBC.
 
 PaCHiPs, designed to tantalizingly reveal the handsome and rugged looks
-of two LA boys - one from West Covina, the other Echo Park.
+of two LA boys - one from West Covina, the other Echo Park - 
+was released in 1982, thus missing out on the show's momentum.
 
-Released in 1982 just before the last year of the show, its poor timing
-destroyed demand, retailers slashed prices, warehouses filled with unsold stock.
+The poor timing of Pac‑Man’s PaCHiPs (and later E.T. the Extra‑Terrestrial)
+destroyed consumer trust, retailers slashed prices, 
+warehouses filled with unsold stock, Atari posted massive losses.
 
-Atari posted massive losses, by 1983, Atari's reputation was in tatters,
+By 1983, the company’s reputation was in tatters,
 the wider market collapsed under the weight of too many consoles and low‑quality games.
-Once the fastest growing company in the U.S., Atari was split off and sold by Warner,
+
+Atari, once the fastest growing company in the U.S., 
+was split and sold off by its parent Warner Communications in 1984,
 marking the collapse of the studio that had defined the early console era.`;
 
     function gameLoop() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      ctx.filter = `blur(${overallBlur}px)`;
-      ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
-      ctx.filter = "none";
+      // WebGL blurred background (fallback: unblurred if no WebGL)
+      if (webglBlur) {
+        const blurred = webglBlur.render(overallBlur);
+        ctx.drawImage(blurred, 0, 0, canvas.width, canvas.height);
+      } else {
+        ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
+      }
 
       const now = Date.now();
 
+      // Permanent deblur zones
       permanentZones.forEach(zone => {
         ctx.save();
         ctx.beginPath();
@@ -125,6 +275,7 @@ marking the collapse of the studio that had defined the early console era.`;
         ctx.restore();
       });
 
+      // Temporary focus zones
       focusZones = focusZones.filter(zone => now - zone.time < 3000);
       focusZones.forEach(zone => {
         const fade = 1 - (now - zone.time) / 3000;
@@ -137,6 +288,7 @@ marking the collapse of the studio that had defined the early console era.`;
         ctx.restore();
       });
 
+      // Draw dots
       dots.forEach(dot => {
         if (!dot.eaten) {
           ctx.fillStyle = "white";
@@ -146,6 +298,7 @@ marking the collapse of the studio that had defined the early console era.`;
         }
       });
 
+      // Eat dots
       dots.forEach(dot => {
         if (!dot.eaten) {
           const dx = pacman.x - dot.x;
@@ -171,7 +324,7 @@ marking the collapse of the studio that had defined the early console era.`;
         pacman.x += xSpeed;
         pacman.y += ySpeed;
 
-        // ✅ Keep Pac-Man inside the screen
+        // Keep Pac-Man inside the screen
         pacman.x = Math.max(pacman.size, Math.min(canvas.width - pacman.size, pacman.x));
         pacman.y = Math.max(pacman.size, Math.min(canvas.height - pacman.size, pacman.y));
 
@@ -203,19 +356,14 @@ marking the collapse of the studio that had defined the early console era.`;
           alpha = 1 - (elapsed - 18000) / 2000;
         }
 
-        // ✅ Full-width translucent background panel
+        // Full-screen translucent background panel
         ctx.save();
         ctx.globalAlpha = alpha * 0.7;
         ctx.fillStyle = "white";
-        ctx.fillRect(
-          0,
-         0,
-          canvas.width,
-          canvas.height
-        );
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
         ctx.restore();
 
-        // ✅ Black text
+        // Black text
         ctx.save();
         ctx.globalAlpha = alpha;
         ctx.fillStyle = "black";
@@ -223,7 +371,7 @@ marking the collapse of the studio that had defined the early console era.`;
         ctx.textAlign = "center";
 
         const lines = historyText.split("\n");
-        let y = canvas.height * 0.07;
+        let y = canvas.height * 0.10; // start nearer the top
 
         lines.forEach(line => {
           ctx.fillText(line, canvas.width / 2, y);
@@ -286,7 +434,7 @@ marking the collapse of the studio that had defined the early console era.`;
         default: return;
       }
 
-      // ✅ Keep Pac-Man inside bounds
+      // Keep Pac-Man inside bounds
       pacman.x = Math.max(pacman.size, Math.min(canvas.width - pacman.size, pacman.x));
       pacman.y = Math.max(pacman.size, Math.min(canvas.height - pacman.size, pacman.y));
 
@@ -302,7 +450,7 @@ marking the collapse of the studio that had defined the early console era.`;
       window.addEventListener("deviceorientation", e => {
         if (gameOver || showHistory) return;
 
-        // ✅ Landscape orientation mapping
+        // Landscape orientation mapping: charging port to the right
         tiltX = (e.beta || 0);     // left/right tilt
         tiltY = -(e.gamma || 0);   // forward/back tilt
       });
@@ -330,10 +478,3 @@ marking the collapse of the studio that had defined the early console era.`;
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
