--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     Use arrow keys or hold phone flat <br>
     with charging port to the right<br>
     and tilt to move.<br>
-    No copyright. No rights reserved.
+    No copyright. No rights reserved. Ver. 12241611
   </button>
-
+// https://copilot.microsoft.com/conversations/join/ynn9ez6nrZpmvr7NCcngm
+// copilot link
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
@@ -482,3 +483,4 @@ marking the collapse of the studio that had defined the early console era.`;
   </script>
 </body>
 </html>
+
